[project]
name = "openai-agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tasneem", email = "tasneem.techsprint@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.0",
]

[project.scripts]
openai-agents-sdk = "openai_agents_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
